@@ -74,6 +74,7 @@ Beautiful Soup, by contrast, only changes the source when absolutely needed to m
 - restored newlines in validation logging to make vaidation issues readable
 - for conversions from RST: removed invalid 'classes' attribute
 - for EPUB and EPUB3: Ebookmaker no longer makes an invalid reference when 'mailto:' links are present
+- for EPUB and EPUB3: Adds a MIN_CHUNK_SIZE to avoid empty chunks when `body` begins with a section.
 
 0.11.30 December 10, 2021
 - for EPUB, down-convert HTML5 tags to divs so the files validate as EPUB2. The new div elements will add a class named the same as the html5 tag, so `<section>` becomes `<div class="section">`. Other attributes are preserved. In addition CSS selectors involving these elements will be transformed accordingly: for example `section` becomes `div.section`
